Fix background image stickiness on mobile

--- a/app/assets/stylesheets/root.sass
+++ b/app/assets/stylesheets/root.sass
@@ -2,13 +2,15 @@
 @import "variables/dimensions"
 
 #main
-  background-image: image-url('building.jpg')
-  background-attachment: fixed
-  background-size: 100% 100%
-  height: 100%
   margin: 0 auto
   max-width: 768px
   min-height: 100vh
+
+  .background-image
+    position: fixed
+    margin: 0 auto
+    max-width: 768px
+    min-height: 100vh
 
 .triangle
   height: 6rem
